@@ -1,3 +1,5 @@
+/* OPENBSD ORIGINAL: lib/libc/stdlib/setenv.c */
+
 /*
  * Copyright (c) 1987 Regents of the University of California.
  * All rights reserved.
