@@ -1,3 +1,5 @@
+/* OPENBSD ORIGINAL: lib/libc/string/strmode.c */
+
 /*-
  * Copyright (c) 1990 The Regents of the University of California.
  * All rights reserved.
