@@ -1,3 +1,5 @@
+/* OPENBSD ORIGINAL: lib/libc/stdlib/strtoul.c */
+
 /*
  * Copyright (c) 1990 Regents of the University of California.
  * All rights reserved.
